# dsft2409_mikeltelo

./: .gitignore  README.md  hola_mundo.py  mi_primera prueba_con_jupyter.ipynb  mi_primera_prueba_con_jupyter.ipynb
2409_dsft_thebridge_core/: README.md
projects/biblioteca_python/DataUtilityHub/: LICENSE  README.md  prueba.py  pyproject.toml  requirements.txt  setup.py
projects/biblioteca_python/DataUtilityHub/docs/: index.md
projects/biblioteca_python/DataUtilityHub/resultados/: reporte_random_forest_20250120_171215.txt  reporte_random_forest_20250120_171401.txt  reporte_random_forest_20250120_172146.txt  reporte_random_forest_20250120_172548.txt  reporte_random_forest_20250120_173537.txt  reporte_random_forest_20250120_174327.txt  reporte_random_forest_20250120_175006.txt  reporte_random_forest_20250120_180416.txt  reporte_random_forest_20250120_180613.txt  reporte_random_forest_20250120_181638.txt  reporte_random_forest_20250120_181947.txt  reporte_random_forest_20250120_183515.txt  reporte_random_forest_20250120_203719.txt
projects/biblioteca_python/DataUtilityHub/src/DataUtilityHub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/biblioteca_python/DataUtilityHub/src/datautilityhub/: __init__.py
projects/biblioteca_python/DataUtilityHub/tests/: __init__.py  test_eda.py  test_ml.py  test_preprocessing.py  test_visualization.py
projects/biblioteca_python/capibara/: LICENSE  pyproject.toml  readme.md  requirements.txt  setup.py  test_readme_example.py  test_simple.py
projects/biblioteca_python/capibara/examples/: basic_usage.py
projects/biblioteca_python/capibara/src/capibara.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projects/biblioteca_python/capibara/tests/: test_capibara.py  test_data_analysis.py
pruebas/: import os.py
(+705 files in other folders)
