[build-system]
requires = ["setuptools>=45", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "DataUtilityHub"
version = "0.1.0"
description = "Una biblioteca de ciencia de datos diseñada para simplificar el análisis exploratorio de datos y machine learning"
authors = [{name = "TheBridge Data Science Students"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.3.0",
    "folium>=0.12.0",
    "category-encoders>=2.3.0",
    "ipywidgets>=7.6.0",
    "jupyter>=1.0.0",
    "statsmodels>=0.13.0",
    "scipy>=1.7.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "optuna>=2.10.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/DataUtilityHub"
Documentation = "https://datautilityhub.readthedocs.io"
Repository = "https://github.com/yourusername/DataUtilityHub.git" 